tests/ui/fail_allsetting.stderr
error[E0599]: no method named `get_skipped` found for struct `Example` in the current scope
  --> tests/ui/fail_allsetting.rs:16:13
   |
4  | struct Example {
   | -------------- method `get_skipped` not found for this struct
...
16 |     example.get_skipped();
   |             ^^^^^^^^^^^ method not found in `Example`
